myanalyzer.output
Terminals unused in grammar

    KW_CONST
    KW_FOR
    KW_BREAK
    KW_CONTINUE
    OP_EXP
    KW_NULL


State 35 conflicts: 1 shift/reduce
State 165 conflicts: 5 reduce/reduce
State 166 conflicts: 5 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list KW_FUNCTION KW_START DELIM_RIGHT_PARANTHESIS parameter_decl_list_main DELIM_LEFT_PARANTHESIS DELIM_COLON type_spec DELIM_CURLY_RIGHT_BRACKET body DELIM_CURLY_LEFT_BRACKET

    2 body: body statements
    3     | statements

    4 statements: KW_VAR var_decl_body
    5           | IDENT OP_ASSIGN expr DELIM_SEMICOLON
    6           | expr DELIM_SEMICOLON
    7           | KW_WHILE expr DELIM_CURLY_RIGHT_BRACKET body DELIM_CURLY_LEFT_BRACKET DELIM_SEMICOLON
    8           | if_statement
    9           | epilogue

   10 if_statement: KW_IF expr body KW_ELSE DELIM_CURLY_RIGHT_BRACKET body DELIM_CURLY_LEFT_BRACKET DELIM_SEMICOLON
   11             | KW_IF expr DELIM_CURLY_RIGHT_BRACKET body DELIM_CURLY_LEFT_BRACKET DELIM_SEMICOLON

   12 epilogue: KW_RETURN DELIM_SEMICOLON
   13         | KW_RETURN expr DELIM_SEMICOLON

   14 decl_list: decl_list decl
   15          | decl

   16 parameter_decl_list_main: %empty
   17                         | parameter_decl_init_main DELIM_COMMA parameter_decl_init_main
   18                         | parameter_decl_init_main

   19 parameter_decl_init_main: parameter_decl_id_main DELIM_COLON type_spec_main

   20 parameter_decl_id_main: IDENT
   21                       | IDENT DELIM_RIGHT_BRACKET DELIM_LEFT_BRACKET

   22 type_spec_main: KW_NUMBER
   23               | KW_STRING

   24 parameter_decl_list: %empty
   25                    | parameter_decl_list DELIM_COMMA parameter_decl_init
   26                    | parameter_decl_init

   27 parameter_decl_init: parameter_decl_id DELIM_COLON type_spec

   28 parameter_decl_id: IDENT
   29                  | IDENT DELIM_RIGHT_BRACKET DELIM_LEFT_BRACKET

   30 decl: KW_VAR var_decl_body
   31     | KW_FUNCTION const_decl_body

   32 const_decl_body: const_decl_list DELIM_COLON type_spec DELIM_SEMICOLON
   33                | const_decl_init

   34 const_decl_list: const_decl_list DELIM_COMMA const_decl_init
   35                | const_decl_init

   36 const_decl_init: const_decl_id OP_ASSIGN const_rule
   37                | const_rule

   38 const_rule: expr
   39           | const_decl_id OP_ASSIGN DELIM_RIGHT_PARANTHESIS parameter_decl_list DELIM_LEFT_PARANTHESIS DELIM_COLON type_spec OP_LESS_EQUAL_THAN DELIM_CURLY_RIGHT_BRACKET body DELIM_CURLY_LEFT_BRACKET DELIM_SEMICOLON

   40 const_decl_id: IDENT
   41              | IDENT DELIM_RIGHT_BRACKET expr DELIM_LEFT_BRACKET
   42              | IDENT DELIM_RIGHT_BRACKET DELIM_LEFT_BRACKET

   43 var_decl_body: var_decl_list DELIM_COLON type_spec DELIM_SEMICOLON

   44 var_decl_list: var_decl_list DELIM_COMMA var_decl_init
   45              | var_decl_init

   46 var_decl_init: var_decl_id
   47              | var_decl_id OP_ASSIGN expr

   48 var_decl_id: IDENT
   49            | IDENT DELIM_RIGHT_BRACKET expr DELIM_LEFT_BRACKET
   50            | IDENT DELIM_RIGHT_BRACKET DELIM_LEFT_BRACKET

   51 type_spec: KW_NUMBER
   52          | KW_BOOLEAN
   53          | KW_STRING
   54          | KW_VOID

   55 expr: NUMBER
   56     | IDENT
   57     | STRING
   58     | IDENT DELIM_RIGHT_BRACKET expr DELIM_LEFT_BRACKET
   59     | DELIM_RIGHT_PARANTHESIS expr DELIM_LEFT_PARANTHESIS
   60     | IDENT DELIM_RIGHT_PARANTHESIS expr DELIM_LEFT_PARANTHESIS
   61     | IDENT DELIM_RIGHT_PARANTHESIS expr DELIM_COMMA expr DELIM_LEFT_PARANTHESIS
   62     | IDENT DELIM_RIGHT_PARANTHESIS DELIM_LEFT_PARANTHESIS
   63     | BOOLEAN_TRUE
   64     | BOOLEAN_FALSE
   65     | expr OP_MUL expr
   66     | expr OP_DIV expr
   67     | expr OP_MOD expr
   68     | expr OP_ADD expr
   69     | expr OP_SUB expr
   70     | OP_ADD expr
   71     | OP_SUB expr
   72     | OP_NOT expr
   73     | expr OP_EQUAL expr
   74     | expr OP_NOT_EQUAL expr
   75     | expr OP_GREATER_THAN expr
   76     | expr OP_GREATER_EQUAL_THAN expr
   77     | expr OP_LESS_EQUAL_THAN expr
   78     | expr OP_AND expr
   79     | expr OP_OR expr


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENT <crepr> (258) 5 20 21 28 29 40 41 42 48 49 50 56 58 60 61 62
    STRING <crepr> (259) 57
    NUMBER <crepr> (260) 55
    KW_NUMBER (261) 22 51
    KW_BOOLEAN (262) 52
    KW_STRING (263) 23 53
    KW_VOID (264) 54
    KW_VAR (265) 4 30
    KW_CONST (266)
    KW_IF (267) 10 11
    KW_ELSE (268) 10
    KW_FOR (269)
    KW_WHILE (270) 7
    KW_FUNCTION (271) 1 31
    KW_BREAK (272)
    KW_CONTINUE (273)
    OP_NOT (274) 72
    OP_AND (275) 78
    OP_OR (276) 79
    OP_EXP (277)
    KW_RETURN (278) 12 13
    KW_NULL (279)
    KW_START (280) 1
    BOOLEAN_TRUE (281) 63
    BOOLEAN_FALSE (282) 64
    OP_ASSIGN (283) 5 36 39 47
    DELIM_SEMICOLON (284) 5 6 7 10 11 12 13 32 39 43
    DELIM_COMMA (285) 17 25 34 44 61
    DELIM_CURLY_RIGHT_BRACKET (286) 1 7 10 11 39
    DELIM_CURLY_LEFT_BRACKET (287) 1 7 10 11 39
    DELIM_COLON (288) 1 19 27 32 39 43
    DELIM_RIGHT_BRACKET (289) 21 29 41 42 49 50 58
    DELIM_LEFT_BRACKET (290) 21 29 41 42 49 50 58
    DELIM_RIGHT_PARANTHESIS (291) 1 39 59 60 61 62
    DELIM_LEFT_PARANTHESIS (292) 1 39 59 60 61 62
    PREFIX (293)
    OP_MUL (294) 65
    OP_DIV (295) 66
    OP_MOD (296) 67
    OP_ADD (297) 68 70
    OP_SUB (298) 69 71
    OP_EQUAL (299) 73
    OP_NOT_EQUAL (300) 74
    OP_GREATER_THAN (301) 75
    OP_GREATER_EQUAL_THAN (302) 76
    OP_LESS_EQUAL_THAN (303) 39 77


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program (50)
        on left: 1
        on right: 0
    body <crepr> (51)
        on left: 2 3
        on right: 1 2 7 10 11 39
    statements <crepr> (52)
        on left: 4 5 6 7 8 9
        on right: 2 3
    if_statement <crepr> (53)
        on left: 10 11
        on right: 8
    epilogue <crepr> (54)
        on left: 12 13
        on right: 9
    decl_list <crepr> (55)
        on left: 14 15
        on right: 1 14
    parameter_decl_list_main <crepr> (56)
        on left: 16 17 18
        on right: 1
    parameter_decl_init_main <crepr> (57)
        on left: 19
        on right: 17 18
    parameter_decl_id_main <crepr> (58)
        on left: 20 21
        on right: 19
    type_spec_main <crepr> (59)
        on left: 22 23
        on right: 19
    parameter_decl_list <crepr> (60)
        on left: 24 25 26
        on right: 25 39
    parameter_decl_init <crepr> (61)
        on left: 27
        on right: 25 26
    parameter_decl_id <crepr> (62)
        on left: 28 29
        on right: 27
    decl <crepr> (63)
        on left: 30 31
        on right: 14 15
    const_decl_body <crepr> (64)
        on left: 32 33
        on right: 31
    const_decl_list <crepr> (65)
        on left: 34 35
        on right: 32 34
    const_decl_init <crepr> (66)
        on left: 36 37
        on right: 33 34 35
    const_rule <crepr> (67)
        on left: 38 39
        on right: 36 37
    const_decl_id <crepr> (68)
        on left: 40 41 42
        on right: 36 39
    var_decl_body <crepr> (69)
        on left: 43
        on right: 4 30
    var_decl_list <crepr> (70)
        on left: 44 45
        on right: 43 44
    var_decl_init <crepr> (71)
        on left: 46 47
        on right: 44 45
    var_decl_id <crepr> (72)
        on left: 48 49 50
        on right: 46 47
    type_spec <crepr> (73)
        on left: 51 52 53 54
        on right: 1 27 32 39 43
    expr <crepr> (74)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 5 6 7 10 11 13 38 41 47 49 58 59 60 61 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79


State 0

    0 $accept: . program $end
    1 program: . decl_list KW_FUNCTION KW_START DELIM_RIGHT_PARANTHESIS parameter_decl_list_main DELIM_LEFT_PARANTHESIS DELIM_COLON type_spec DELIM_CURLY_RIGHT_BRACKET body DELIM_CURLY_LEFT_BRACKET
   14 decl_list: . decl_list decl
   15          | . decl
   30 decl: . KW_VAR var_decl_body
   31     | . KW_FUNCTION const_decl_body

    KW_VAR       shift, and go to state 1
    KW_FUNCTION  shift, and go to state 2

    program    go to state 3
    decl_list  go to state 4
    decl       go to state 5


State 1

   30 decl: KW_VAR . var_decl_body
   43 var_decl_body: . var_decl_list DELIM_COLON type_spec DELIM_SEMICOLON
   44 var_decl_list: . var_decl_list DELIM_COMMA var_decl_init
   45              | . var_decl_init
   46 var_decl_init: . var_decl_id
   47              | . var_decl_id OP_ASSIGN expr
   48 var_decl_id: . IDENT
   49            | . IDENT DELIM_RIGHT_BRACKET expr DELIM_LEFT_BRACKET
   50            | . IDENT DELIM_RIGHT_BRACKET DELIM_LEFT_BRACKET

    IDENT  shift, and go to state 6

    var_decl_body  go to state 7
    var_decl_list  go to state 8
    var_decl_init  go to state 9
    var_decl_id    go to state 10


State 2

   31 decl: KW_FUNCTION . const_decl_body
   32 const_decl_body: . const_decl_list DELIM_COLON type_spec DELIM_SEMICOLON
   33                | . const_decl_init
   34 const_decl_list: . const_decl_list DELIM_COMMA const_decl_init
   35                | . const_decl_init
   36 const_decl_init: . const_decl_id OP_ASSIGN const_rule
   37                | . const_rule
   38 const_rule: . expr
   39           | . const_decl_id OP_ASSIGN DELIM_RIGHT_PARANTHESIS parameter_decl_list DELIM_LEFT_PARANTHESIS DELIM_COLON type_spec OP_LESS_EQUAL_THAN DELIM_CURLY_RIGHT_BRACKET body DELIM_CURLY_LEFT_BRACKET DELIM_SEMICOLON
   40 const_decl_id: . IDENT
   41              | . IDENT DELIM_RIGHT_BRACKET expr DELIM_LEFT_BRACKET
   42              | . IDENT DELIM_RIGHT_BRACKET DELIM_LEFT_BRACKET
   55 expr: . NUMBER
   56     | . IDENT
   57     | . STRING
   58     | . IDENT DELIM_RIGHT_BRACKET expr DELIM_LEFT_BRACKET
   59     | . DELIM_RIGHT_PARANTHESIS expr DELIM_LEFT_PARANTHESIS
   60     | . IDENT DELIM_RIGHT_PARANTHESIS expr DELIM_LEFT_PARANTHESIS
   61     | . IDENT DELIM_RIGHT_PARANTHESIS expr DELIM_COMMA expr DELIM_LEFT_PARANTHESIS
   62     | . IDENT DELIM_RIGHT_PARANTHESIS DELIM_LEFT_PARANTHESIS
   63     | . BOOLEAN_TRUE
   64     | . BOOLEAN_FALSE
   65     | . expr OP_MUL expr
   66     | . expr OP_DIV expr
   67     | . expr OP_MOD expr
   68     | . expr OP_ADD expr
   69     | . expr OP_SUB expr
   70     | . OP_ADD expr
   71     | . OP_SUB expr
   72     | . OP_NOT expr
   73     | . expr OP_EQUAL expr
   74     | . expr OP_NOT_EQUAL expr
   75     | . expr OP_GREATER_THAN expr
   76     | . expr OP_GREATER_EQUAL_THAN expr
   77     | . expr OP_LESS_EQUAL_THAN expr
   78     | . expr OP_AND expr
   79     | . expr OP_OR expr

    IDENT                    shift, and go to state 11
    STRING                   shift, and go to state 12
    NUMBER                   shift, and go to state 13
    OP_NOT                   shift, and go to state 14
    BOOLEAN_TRUE             shift, and go to state 15
    BOOLEAN_FALSE            shift, and go to state 16
    DELIM_RIGHT_PARANTHESIS  shift, and go to state 17
    OP_ADD                   shift, and go to state 18
    OP_SUB                   shift, and go to state 19

    const_decl_body  go to state 20
    const_decl_list  go to state 21
    const_decl_init  go to state 22
    const_rule       go to state 23
    const_decl_id    go to state 24
    expr             go to state 25


State 3

    0 $accept: program . $end

    $end  shift, and go to state 26


State 4

    1 program: decl_list . KW_FUNCTION KW_START DELIM_RIGHT_PARANTHESIS parameter_decl_list_main DELIM_LEFT_PARANTHESIS DELIM_COLON type_spec DELIM_CURLY_RIGHT_BRACKET body DELIM_CURLY_LEFT_BRACKET
   14 decl_list: decl_list . decl
   30 decl: . KW_VAR var_decl_body
   31     | . KW_FUNCTION const_decl_body

    KW_VAR       shift, and go to state 1
    KW_FUNCTION  shift, and go to state 27

    decl  go to state 28


State 5

   15 decl_list: decl .

    $default  reduce using rule 15 (decl_list)


State 6

   48 var_decl_id: IDENT .  [OP_ASSIGN, DELIM_COMMA, DELIM_COLON]
   49            | IDENT . DELIM_RIGHT_BRACKET expr DELIM_LEFT_BRACKET
   50            | IDENT . DELIM_RIGHT_BRACKET DELIM_LEFT_BRACKET

    DELIM_RIGHT_BRACKET  shift, and go to state 29

    $default  reduce using rule 48 (var_decl_id)


State 7

   30 decl: KW_VAR var_decl_body .

    $default  reduce using rule 30 (decl)


State 8

   43 var_decl_body: var_decl_list . DELIM_COLON type_spec DELIM_SEMICOLON
   44 var_decl_list: var_decl_list . DELIM_COMMA var_decl_init

    DELIM_COMMA  shift, and go to state 30
    DELIM_COLON  shift, and go to state 31


State 9

   45 var_decl_list: var_decl_init .

    $default  reduce using rule 45 (var_decl_list)


State 10

   46 var_decl_init: var_decl_id .  [DELIM_COMMA, DELIM_COLON]
   47              | var_decl_id . OP_ASSIGN expr

    OP_ASSIGN  shift, and go to state 32

    $default  reduce using rule 46 (var_decl_init)


State 11

   40 const_decl_id: IDENT .  [OP_ASSIGN]
   41              | IDENT . DELIM_RIGHT_BRACKET expr DELIM_LEFT_BRACKET
   42              | IDENT . DELIM_RIGHT_BRACKET DELIM_LEFT_BRACKET
   56 expr: IDENT .  [KW_VAR, KW_FUNCTION, OP_AND, OP_OR, DELIM_COMMA, DELIM_COLON, OP_MUL, OP_DIV, OP_MOD, OP_ADD, OP_SUB, OP_EQUAL, OP_NOT_EQUAL, OP_GREATER_THAN, OP_GREATER_EQUAL_THAN, OP_LESS_EQUAL_THAN]
   58     | IDENT . DELIM_RIGHT_BRACKET expr DELIM_LEFT_BRACKET
   60     | IDENT . DELIM_RIGHT_PARANTHESIS expr DELIM_LEFT_PARANTHESIS
   61     | IDENT . DELIM_RIGHT_PARANTHESIS expr DELIM_COMMA expr DELIM_LEFT_PARANTHESIS
   62     | IDENT . DELIM_RIGHT_PARANTHESIS DELIM_LEFT_PARANTHESIS

    DELIM_RIGHT_BRACKET      shift, and go to state 33
    DELIM_RIGHT_PARANTHESIS  shift, and go to state 34

    OP_ASSIGN  reduce using rule 40 (const_decl_id)
    $default   reduce using rule 56 (expr)


State 12

   57 expr: STRING .

    $default  reduce using rule 57 (expr)


State 13

   55 expr: NUMBER .

    $default  reduce using rule 55 (expr)


State 14

   55 expr: . NUMBER
   56     | . IDENT
   57     | . STRING
   58     | . IDENT DELIM_RIGHT_BRACKET expr DELIM_LEFT_BRACKET
   59     | . DELIM_RIGHT_PARANTHESIS expr DELIM_LEFT_PARANTHESIS
   60     | . IDENT DELIM_RIGHT_PARANTHESIS expr DELIM_LEFT_PARANTHESIS
   61     | . IDENT DELIM_RIGHT_PARANTHESIS expr DELIM_COMMA expr DELIM_LEFT_PARANTHESIS
   62     | . IDENT DELIM_RIGHT_PARANTHESIS DELIM_LEFT_PARANTHESIS
   63     | . BOOLEAN_TRUE
   64     | . BOOLEAN_FALSE
   65     | . expr OP_MUL expr
   66     | . expr OP_DIV expr
   67     | . expr OP_MOD expr
   68     | . expr OP_ADD expr
   69     | . expr OP_SUB expr
   70     | . OP_ADD expr
   71     | . OP_SUB expr
   72     | . OP_NOT expr
   72     | OP_NOT . expr
   73     | . expr OP_EQUAL expr
   74     | . expr OP_NOT_EQUAL expr
   75     | . expr OP_GREATER_THAN expr
   76     | . expr OP_GREATER_EQUAL_THAN expr
   77     | . expr OP_LESS_EQUAL_THAN expr
   78     | . expr OP_AND expr
   79     | . expr OP_OR expr

    IDENT                    shift, and go to state 35
    STRING                   shift, and go to state 12
    NUMBER                   shift, and go to state 13
    OP_NOT                   shift, and go to state 14
    BOOLEAN_TRUE             shift, and go to state 15
    BOOLEAN_FALSE            shift, and go to state 16
    DELIM_RIGHT_PARANTHESIS  shift, and go to state 17
    OP_ADD                   shift, and go to state 18
    OP_SUB                   shift, and go to state 19

    expr  go to state 36


State 15

   63 expr: BOOLEAN_TRUE .

    $default  reduce using rule 63 (expr)


State 16

   64 expr: BOOLEAN_FALSE .

    $default  reduce using rule 64 (expr)


State 17

   55 expr: . NUMBER
   56     | . IDENT
   57     | . STRING
   58     | . IDENT DELIM_RIGHT_BRACKET expr DELIM_LEFT_BRACKET
   59     | . DELIM_RIGHT_PARANTHESIS expr DELIM_LEFT_PARANTHESIS
   59     | DELIM_RIGHT_PARANTHESIS . expr DELIM_LEFT_PARANTHESIS
   60     | . IDENT DELIM_RIGHT_PARANTHESIS expr DELIM_LEFT_PARANTHESIS
   61     | . IDENT DELIM_RIGHT_PARANTHESIS expr DELIM_COMMA expr DELIM_LEFT_PARANTHESIS
   62     | . IDENT DELIM_RIGHT_PARANTHESIS DELIM_LEFT_PARANTHESIS
   63     | . BOOLEAN_TRUE
   64     | . BOOLEAN_FALSE
   65     | . expr OP_MUL expr
   66     | . expr OP_DIV expr
   67     | . expr OP_MOD expr
   68     | . expr OP_ADD expr
   69     | . expr OP_SUB expr
   70     | . OP_ADD expr
   71     | . OP_SUB expr
   72     | . OP_NOT expr
   73     | . expr OP_EQUAL expr
   74     | . expr OP_NOT_EQUAL expr
   75     | . expr OP_GREATER_THAN expr
   76     | . expr OP_GREATER_EQUAL_THAN expr
   77     | . expr OP_LESS_EQUAL_THAN expr
   78     | . expr OP_AND expr
   79     | . expr OP_OR expr

    IDENT                    shift, and go to state 35
    STRING                   shift, and go to state 12
    NUMBER                   shift, and go to state 13
    OP_NOT                   shift, and go to state 14
    BOOLEAN_TRUE             shift, and go to state 15
    BOOLEAN_FALSE            shift, and go to state 16
    DELIM_RIGHT_PARANTHESIS  shift, and go to state 17
    OP_ADD                   shift, and go to state 18
    OP_SUB                   shift, and go to state 19

    expr  go to state 37


State 18

   55 expr: . NUMBER
   56     | . IDENT
   57     | . STRING
   58     | . IDENT DELIM_RIGHT_BRACKET expr DELIM_LEFT_BRACKET
   59     | . DELIM_RIGHT_PARANTHESIS expr DELIM_LEFT_PARANTHESIS
   60     | . IDENT DELIM_RIGHT_PARANTHESIS expr DELIM_LEFT_PARANTHESIS
   61     | . IDENT DELIM_RIGHT_PARANTHESIS expr DELIM_COMMA expr DELIM_LEFT_PARANTHESIS
   62     | . IDENT DELIM_RIGHT_PARANTHESIS DELIM_LEFT_PARANTHESIS
   63     | . BOOLEAN_TRUE
   64     | . BOOLEAN_FALSE
   65     | . expr OP_MUL expr
   66     | . expr OP_DIV expr
   67     | . expr OP_MOD expr
   68     | . expr OP_ADD expr
   69     | . expr OP_SUB expr
   70     | . OP_ADD expr
   70     | OP_ADD . expr
   71     | . OP_SUB expr
   72     | . OP_NOT expr
   73     | . expr OP_EQUAL expr
   74     | . expr OP_NOT_EQUAL expr
   75     | . expr OP_GREATER_THAN expr
   76     | . expr OP_GREATER_EQUAL_THAN expr
   77     | . expr OP_LESS_EQUAL_THAN expr
   78     | . expr OP_AND expr
   79     | . expr OP_OR expr

    IDENT                    shift, and go to state 35
    STRING                   shift, and go to state 12
    NUMBER                   shift, and go to state 13
    OP_NOT                   shift, and go to state 14
    BOOLEAN_TRUE             shift, and go to state 15
    BOOLEAN_FALSE            shift, and go to state 16
    DELIM_RIGHT_PARANTHESIS  shift, and go to state 17
    OP_ADD                   shift, and go to state 18
    OP_SUB                   shift, and go to state 19

    expr  go to state 38


State 19
